<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApodActivity">


    <ImageView
        android:id="@+id/apodBackgroundImage"
        android:layout_width="442dp"
        android:layout_height="954dp"
        android:alpha=".55"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/apodBackImage"
        android:layout_width="107dp"
        android:layout_height="63dp"
        android:layout_marginTop="664dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="326dp"
        android:layout_height="226dp"
        android:layout_marginTop="112dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:minDate="803275200000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/get_a_space_picture_for_any_day"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apodRandomBtn"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="160dp"
        android:text="@string/random_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/apodSubmitBtn"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_marginTop="356dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/apodRandomBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
