<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <!-- In the above cardview widget cardelevation property will give elevation to your card view
        card corner radius will provide radius to your card view card background color will give
        background color to your card view card max elevation will give the cardview maximum
        elevation card prevent corner overlap will add padding to CardView on v20 and before to
        prevent intersections between the Card content and rounded corners. Card use compact padding
        will add padding in API v21+ as well to have the same measurements with previous versions -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_layout"
        android:layout_width="359dp"
        android:layout_height="384dp"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/libDownloadButton"
            android:layout_width="97dp"
            android:layout_height="34dp"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="4dp"
            android:text="@string/download"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/libTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/libCheckBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/cardImageView"
            android:layout_width="350dp"
            android:layout_height="281dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/libTitle"
            app:layout_constraintVertical_bias="0.925"
            tools:srcCompat="@tools:sample/avatars" />

        <CheckBox
            android:id="@+id/libCheckBox"
            android:layout_width="65dp"
            android:layout_height="41dp"
            android:checked="true"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/libTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/libTitle"
            android:layout_width="353dp"
            android:layout_height="44dp"
            android:layout_marginTop="41dp"
            android:maxLines="2"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
